kubernetes-networks/web-pod.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: hardkov/yd47_platform:nginx_0.0.1
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        volumeMounts:
        - name: workdir
          mountPath: /app
      volumes:
      - name: workdir
        emptyDir: {}
